--- a/pruabe.html
+++ b/pruabe.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor.</p>
+    <h1>MI PAGINA WEB FUNCIONA COM GITHUB</h1>
     <h2>Lorem ipsum dolor sit.</h2>
 </body>
 </html>
